# servicedesk

./: .env  .gitignore  Dockerfile  README.md  datadump.json  db.sqlite3  db_dump.json  docker-compose.yaml  dump.json  pyproject.toml  requirements.txt  test_response.py
docker/mysql/: Dockerfile  db-init.sh
rag/config/: telegram_bot.env
rag/not_included_data/: инструкция.docx
service/: admin.py  apps.py  constraints.py  context_processors.py  forms.py  middleware.py  models.py  permissions.py  status_logic.py  utils.py  variables.py  views.py
service/forms/: Asset_Forms.py  Chat_forms.py  Company_forms.py  Email_forms.py  Field_forms.py  Notification_forms.py  Performer_forms.py  ReferenceForms.py  Request_forms.py  Request_forns.py  Role_forms.py  Settings_forms.py  User_forms.py
service/migrations/: 0001_initial.py  0002_add_custom.py  0002_attribute_custompermission_emailsettings_priority_and_more.py  0002_customuser_company.py  0003_add_custom_groups.py  0003_assetattribute_value_boolean_and_more.py  0003_request.py  0004_add_admin.py  0004_assettypeattribute.py  0004_customuser_role.py  0005_alter_grouppermission_access_level.py  0005_doc_event_alter_status_color_chatmessage_and_more.py  0005_request_company.py  0006_notificationtemplate_alter_customuser_is_superuser_and_more.py  0006_priority_requesttype_status_request_completed_and_more.py  0007_remove_comment_content_and_more.py  0007_remove_priorityduration_duration_and_more.py  0008_lifecycleevent.py  0010_savedfilter.py  (+55 more)
servicedesk/: asgi.py  scheme.py  settings.py  urls.py  wsgi.py
(+137 files in other folders)
