[tool.poetry]
name = "servicedesk"
version = "0.1.0"
description = ""
authors = ["Egor <sidorov.egor.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
absl-py = "^2.1.0"
asgiref = "^3.7.2"
chardet = "^5.2.0"
django-ckeditor = "^6.7.1"
django-cors-headers = "^4.3.1"
django-js-asset = "^2.2.0"
django-widget-tweaks = "^1.5.0"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"
pytz = "^2024.1"
reportlab = "^4.1.0"
sqlparse = "^0.4.4"
tzdata = "^2024.1"
graphviz = "^0.20.1"
django-model-utils = "^4.5.1"
mysqlclient = "^2.2.4"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
django-colorfield = "^0.11.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
Django = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
